argocd-applicationset-nginx-deployment/app/nginx/overlays/dev/replica-count.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
